--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0"
   },
